# leagus

./: Cargo.toml  package-lock.json  package.json  readme.org
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  models.rs
docs/: project.org
docs/resources/: Components.drawio  structure.d2
leagus/: Cargo.toml
leagus-web/: Cargo.toml  Makefile.toml  package-lock.json  tailwind.config.js
leagus-web-api/: Cargo.toml  package-lock.json  tailwind.config.js
leagus-web-api/assets/: output.css
leagus-web-api/src/: errors.rs  handlers.rs  main.rs  state.rs
leagus-web-api/src/handlers/: leagues.rs  root.rs  seasons.rs  sessions.rs
leagus-web-api/src/handlers/api/: seasons.rs
leagus-web-api/templates/: base.html  index.html  league.html  leagues.html
leagus-web-api/templates/partials/: index_content.html  league.html  leagues_content.html  season_create_modal.html
leagus-web-api/templates/partials/leagues/: single_content.html
leagus-web-api/templates/partials/seasons/: points_table.html
leagus-web-app/: package-lock.json  package.json  pnpm-lock.yaml
leagus-web-app/src/routes/: +layout.svelte  +page.svelte
leagus-web-app/src/routes/leagues/: +page.svelte
leagus-web/assets/: input.css  output.css
leagus-web/src/: errors.rs  handlers.rs  main.rs  state.rs  templates.rs
leagus-web/src/handlers/: api.rs  leagues.rs  participants.rs  root.rs  rounds.rs  seasons.rs  sessions.rs  venues.rs
leagus-web/src/handlers/api/: leagues.rs  seasons.rs  venues.rs
leagus-web/src/models/: league_entry.rs
leagus-web/templates/: base.html  index.html  league.html  leagues.html  participants.html  seasons_for_league.html  venues.html
leagus-web/templates/partials/: index_content.html  leagues_content.html  navbar.html
leagus-web/templates/partials/common/: item_list.html
leagus-web/templates/partials/leagues/: breadcrumbs.html  create_league.html  season_view.html  seasons_table.html  single_content.html
leagus-web/templates/partials/participants/: create_participant.html
leagus-web/templates/partials/rounds/: round_matches.html  round_nav.html  round_participants.html  round_update_participants.html  round_view.html  update_participants_list.html
leagus-web/templates/partials/seasons/: points_table.html
leagus-web/templates/partials/sessions/: active_session.html  no_session.html  session_view.html  single_session.html
leagus-web/templates/partials/venues/: create_venue.html
leagus/src/: cli.rs  main.rs  models.rs  persistence.rs
leagus/src/cli/: database.rs  leagues.rs  participants.rs  seasons.rs  sessions.rs
leagus/src/models/: a_match.rs  id.rs  league.rs  participant.rs  points_table.rs  round.rs  season.rs  session.rs  venue.rs
leagus/src/persistence/: in_memory_store.rs  mongo_store.rs  sync.rs
leagus/src/persistence/sync/: mongo_store.rs
