[package]
name = "leagus-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.9.0", features = ["full"] }
serde_json = "1.0.114"
leagus = { path = "../leagus" }
chrono = "0.4.9"
