[package]
name = "leagus-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4" }
axum-htmx = "0.5.0"
bson = "2.9.0"
chrono = "0.4.9"
leagus = { path = "../leagus" }
serde_json = "1.0.114"
tokio = { version = "1.9.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
