[package]
name = "leagus-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.15.4" }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["tracing"] }
axum-htmx = "0.8.1"
bson = "2.15.0"
chrono = "0.4.9"
futures = "0.3.30"
leagus = { path = "../leagus" }
serde = "1.0.9"
serde_json = "1.0.114"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "tracing", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
