[package]
name = "leagus"
version = "0.1.0"
edition = "2021"
description = "The Leagus league management tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.34"
clap = { version = "4.5.1", features = ["derive", "color", "cargo"] }
itertools = "0.12.1"
serde = "1.0.197"
serde_json = "1.0.114"
serde_with = "3.7.0"
bson = "2.9.0"
futures = "0.3.30"
tracing = "0.1.40"

# [dependencies.uuid]
# version = "1.7.0"
# features = [
#     "v4",                # Lets you generate random UUIDs
#     "fast-rng",          # Use a faster (but still sufficiently random) RNG
#     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
# ]

[dependencies.mongodb]
version = "2.8.1"
features = ["tokio-sync"]

[dependencies.chrono]
version = "0.4.34"
features = [
  "serde", # Enable serialization/de-serialization via serde
]

[dev-dependencies]
pretty_assertions = "1"
